@@ -407,6 +407,7 @@ EOF
 AT_CLEANUP
 
 AT_SETUP([allow tex font -1, ticket #81])
+AT_KEYWORDS([pict2e tikz])
 AT_DATA([text.fig], [FIG_FILE_TOP
 4 0 0 50 -1 -1 12 0.0 0 150 405 0 0 Text\001
 ])
@@ -414,6 +415,11 @@ AT_CHECK([fig2dev -L pict2e text.fig
 ], 0, ignore)
 AT_CHECK([fig2dev -L tikz text.fig
 ], 0, ignore)
+AT_CLEANUP
+
+AT_SETUP([reject ASCII NUL ('\0') in input, ticket #80])
+AT_KEYWORDS([read.c svg])
+AT_CHECK([fig2dev -L svg $srcdir/data/text_w_ascii0.fig], 1, ignore, ignore)
 AT_CLEANUP
 
 AT_BANNER([Dynamically allocate picture file name.])
