@@ -6,6 +6,10 @@ Patchlevel Xx (Xxx 20xx)
 
 BUGS FIXED:
 	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
+	o Fix ticket #81.
+	o Do not allow ASCII NUL anywhere in input. Fixes ticket #80.
+	o Use getline() to improve input scanning.
+	  Fixes tickets #58, #59, #61, #62, #67, #78, #79.
 	o Correctly scan embedded pdfs for /MediaBox value.
 	o Convert polygons having too few points to polylines. Ticket #56.
 	o Reject huge arrow types causing integer overflow. Ticket #57.
